--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 		<!-- CSS overrides - remove if you don't need it -->
-		<link rel="stylesheet" href="css/app.css">
+		<!-- link rel="stylesheet" href="css/app.css" -->
 	</head>
 	<body>
 		<section class="todoapp">
@@ -16,13 +16,13 @@
 				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
-			<section class="main">
+			<section class="main hidden">
 				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list">
 					<!-- These are here just to show the structure of the list items -->
 					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-					<li class="completed">
+					<!-- <li class="completed">
 						<div class="view">
 							<input class="toggle" type="checkbox" checked>
 							<label>Taste JavaScript</label>
@@ -37,11 +37,11 @@
 							<button class="destroy"></button>
 						</div>
 						<input class="edit" value="Rule the web">
-					</li>
+					</li> -->
 				</ul>
 			</section>
 			<!-- This footer should be hidden by default and shown when there are todos -->
-			<footer class="footer">
+			<footer class="footer hidden">
 				<!-- This should be `0 items left` by default -->
 				<span class="todo-count"><strong>0</strong> item left</span>
 				<!-- Remove this if you don't implement routing -->
@@ -69,7 +69,10 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<!-- Scripts here. Don't remove ↓ -->
-		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="js/app.js"></script>
+		<script type="module">
+			import { TodoApp } from './js/app.js';
+			const todoApp = new TodoApp();
+			todoApp.render();
+		</script>
 	</body>
 </html>
